--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "lunr.js": "~0.5.4",
     "bourbon": "~4.0.2",
     "jsondiffpatch": "~0.1.8",
-    "oclazyload": "LFDM/ocLazyLoad#master"
+    "oclazyload": "LFDM/ocLazyLoad#master",
+    "angular-gridster": "~0.9.16"
   }
 }
