--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,6 @@
     "bourbon": "~4.0.2",
     "jsondiffpatch": "~0.1.8",
     "oclazyload": "LFDM/ocLazyLoad#master",
-    "angular-gridster": "~0.9.16"
+    "angular-gridster": "SekibOmazic/so-dashboard#master"
   }
 }
