--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "grunt-contrib-sass": "0.7.3",
     "grunt-shell": "0.7.0",
     "grunt-contrib-concat": "~0.5.0",
-    "grunt-newer": "LFDM/grunt-newer"
+    "grunt-newer": "LFDM/grunt-newer",
+    "grunt-ngdocs": "0.2.4"
   },
   "scripts": {
     "test": "grunt karma:spec coveralls jshint && protractor protractor-config-travis.js"
